D3 implementation for rq1 and rq2

--- a/web/index.html
+++ b/web/index.html
@@ -23,14 +23,14 @@
           <h2>Tag assessment</h2>
           <p>Having an overview of the most relevant tags defined in the project and their distribution among issues is important for different reasons. First, it provides some insights about the relevance of specific topics in the project community. Second, since an issue in GitHub can be marked with one or more tags, it allows identifying relations between topics.</p>
           <p class="text-center">
-            <!--<svg class="rq1"></svg>-->
+            <svg class="rq1"></svg>
           </p>
           <hr>
 
           <h2>User assessment</h2>
           <p>Visualizing the people involved in the issues marked with a given tag can quickly unveil active administrators and users for each topic. In particular, it can help identifying the administrators that most frequently take decisions (e.g., accepting or rejecting issues, etc.) with regards to a given topic. Furthermore, it allows discovering those users collaborating actively on a specific tag, thus pointing out possible knowledgeable developers on a given topic.</p>
           <p class="text-center">
-            <!--<svg class="rq2"></svg>-->
+            <svg class="rq2"></svg>
           </p>
           <hr>
 
@@ -47,6 +47,8 @@
   <script src="js/vendor/jquery.js"></script>
   <script src="js/bootstrap/bootstrap.min.js"></script>
   <script src="js/d3.v3.min.js" charset="utf-8"></script>
+  <script src="js/rq1.js"></script>
+  <script src="js/rq2.js"></script>
   <script src="js/rq3.js"></script>
   </body>
 </html>
