Preparing style for the webpage

--- a/web-server/labelAnalysisServer/web/index.html
+++ b/web-server/labelAnalysisServer/web/index.html
@@ -21,34 +21,52 @@
   </head>
   <body>
     <div class="container">
+    
       <div style="margin-top: 25px;" class="jumbotron">
         <div class="row">
-          <div class="col-md-6">
-            <h1>Label analyzer</h1> 
-            <h2>Motto here</h2>
-          </div>
-          <div class="col-md-6">
-            <h1>Label analyzer</h1> 
-            <h2>Motto here</h2>
+          <div class="col-md-12">
+            <h1>Tag Git!</h1> 
+            <h2>What issue tags can tell you about your project?</h2>
           </div>
         </div>
       </div>
 
 
       <div class="row">
-        <div class="col-md-8">
-          <h1>What the fuck is this?</h1> 
-          <p>Here we introduce the tool</p>
+        <div class="col-md-7">
+          <h3 class="text-center">Catchy sentece here</h3>
+          <p  class="text-center">Another one</p>
         </div>
-        <div class="col-md-4">
-          <h1>Select your project</h1> 
+        <div class="selector">
+        <div class="col-md-4 col-md-offset-1">
+          <h2>Select your project</h2> 
           <div id ="projectselection"> 
             <div id='pcombobox'></div>
             <button type="button" onclick="location.href='project.html?projectId=' + $('#pcombobox').children('input')[0].value">Show me!</button>
           </div>
         </div>
+        </div>
       </div>
 
+      <div class="row">
+        <div class="col-md-4">
+          <h3 class="text-center">RQ1</h3>
+          <p  class="text-center">This is a description of the first visualization</p>
+        </div>
+        <div class="col-md-4">
+          <h3 class="text-center">RQ2</h3>
+          <p  class="text-center">This is a description of the second visualization</p>
+        </div>
+        <div class="col-md-4">
+          <h3 class="text-center">R3</h3>
+          <p  class="text-center">This is a description of the third visualization</p>
+        </div>
+      </div>
     </div>
+
+    <footer>
+    <hr>
+    <p class="text-center">AtlanMod</p>
+    </footer>
   </body>
 </html>
