--- a/web-server/labelAnalysisServer/web/project.html
+++ b/web-server/labelAnalysisServer/web/project.html
@@ -20,22 +20,18 @@
   </head>
   <body>
     <div class="container">
-      <div class="row">
-        <div class="col-md-12">
-          <h1 class="text-center">Label Analysis</h1>
-          <hr>
-          <h3>Our proposal</h3>
-          <p>
-            Our tool analyzes the community involved in the issues of the Netty project. Our analysis is based on the labels provided for each issue.
-          </p>
-
-          <h2>Tag assessment</h2>
-          <p>Having an overview of the most relevant tags defined in the project and their distribution among issues is important for different reasons. First, it provides some insights about the relevance of specific topics in the project community. Second, since an issue in GitHub can be marked with one or more tags, it allows identifying relations between topics.</p>
-  		    <div id="nolabels" class="msj" style="display:none">The selected project has no labels</div>
-          <div class="rq1"></div>
-          
-          <hr>
-
+    <div class="row">
+      <div class="col-md-2">
+        <h2>Tag assessment</h2>
+        <p>Having an overview of the most relevant tags defined in the project and their distribution among issues is important for different reasons. First, it provides some insights about the relevance of specific topics in the project community. Second, since an issue in GitHub can be marked with one or more tags, it allows identifying relations between topics.</p>
+      </div>
+      <div class="col-md-10">
+		    <div id="nolabels" class="msj" style="display:none">The selected project has no labels</div>
+        <div class="rq1"></div>
+        <hr>
+      </div>
+    </div>
+    <div class="row">
           <h2>User assessment</h2>
           <p>Visualizing the people involved in the issues marked with a given tag can quickly unveil active administrators and users for each topic. In particular, it can help identifying the administrators that most frequently take decisions (e.g., accepting or rejecting issues, etc.) with regards to a given topic. Furthermore, it allows discovering those users collaborating actively on a specific tag, thus pointing out possible knowledgeable developers on a given topic.</p>
           <p class="text-center">
