--- a/web-server/labelAnalysisServer/web/index.html
+++ b/web-server/labelAnalysisServer/web/index.html
@@ -23,7 +23,7 @@
     <div class="container">
     
       <div style="margin-top: 25px;" class="jumbotron">
-        <div class="row">
+        <div class="row top">
           <div class="col-md-12">
             <h1>Tag Git!</h1> 
             <h2>What issue tags can tell you about your project?</h2>
@@ -32,34 +32,43 @@
       </div>
 
 
-      <div class="row">
-        <div class="col-md-7">
-          <h3 class="text-center">Catchy sentece here</h3>
-          <p  class="text-center">Another one</p>
-        </div>
-        <div class="selector">
-        <div class="col-md-4 col-md-offset-1">
-          <h2>Select your project</h2> 
-          <div id ="projectselection"> 
-            <div id='pcombobox'></div>
-            <button type="button" onclick="location.href='project.html?projectId=' + $('#pcombobox').children('input')[0].value">Show me!</button>
+      <div class="row middle">
+        <div class="col-md-8">
+        	<div class=" abstract">
+          		<h3 class="text-center">Catchy sentece here</h3>
+          		<p  class="text-center">Another one</p>
           </div>
         </div>
-        </div>
+        
+        <div class="col-md-4 col-md-offset-0">
+          <div class="selector">
+          	<h2>Select your project</h2> 
+          	<div id ="projectselection"> 
+            	<div id='pcombobox'></div>
+            		<button type="button" onclick="location.href='project.html?projectId=' + $('#pcombobox').children('input')[0].value">Show me!</button>
+          	</div>
+         </div>
+       	</div>
       </div>
 
-      <div class="row">
+      <div class="row bottom">
         <div class="col-md-4">
-          <h3 class="text-center">RQ1</h3>
-          <p  class="text-center">This is a description of the first visualization</p>
+        	<div class= "rqbox">
+          		<h3 class="text-center">RQ1</h3>
+          		<p  class="text-center">This is a description of the first visualization</p>
+          	</div>
         </div>
         <div class="col-md-4">
-          <h3 class="text-center">RQ2</h3>
-          <p  class="text-center">This is a description of the second visualization</p>
+        	<div class= "rqbox">
+          		<h3 class="text-center">RQ2</h3>
+          		<p  class="text-ce	nter">This is a description of the second visualization</p>
+          	</div>
         </div>
         <div class="col-md-4">
-          <h3 class="text-center">R3</h3>
-          <p  class="text-center">This is a description of the third visualization</p>
+        	<div class="rqbox">
+          		<h3 class="text-center">R3</h3>
+          		<p  class="text-center">This is a description of the third visualization</p>
+          	</div>
         </div>
       </div>
     </div>
