--- a/web-server/labelAnalysisServer/web/index.html
+++ b/web-server/labelAnalysisServer/web/index.html
@@ -7,6 +7,8 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/jQWidgets/jqx.base.css" />
+
+    <link href='http://fonts.googleapis.com/css?family=Exo:600,900' rel='stylesheet' type='text/css'>
     
   	<script src="js/vendor/jquery.js"></script>
   	<script src="js/bootstrap/bootstrap.min.js"></script>
@@ -25,6 +27,7 @@
       <div style="margin-top: 25px;" class="jumbotron">
         <div class="row top">
           <div class="col-md-12">
+            <img style="float:right; width:200px; padding-top:30px; margin-right:30px;" src="imgs/icon.png"/>
             <h1>Tag Git!</h1> 
             <h2>What issue tags can tell you about your project?</h2>
           </div>
