Minor changes on the HTML text to improve the description of the visualizatons

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Label Analyzer.</title>
+    <title>GitHub Label Analyzer</title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
     <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/jQWidgets/jqx.base.css" />
@@ -38,8 +38,8 @@
       <div class="row middle">
         <div class="col-md-9">
         	<div class="abstract">
-          		<h2 class="text-center">What issue labels can tell you about your project?</h2>
-          		<h3 class="text-center">Three easy-to-read visualizations will allow you to better organize your project</h3>
+          		<h2 class="text-center">What can issue labels teach you about your project?</h2>
+          		<h3 class="text-center">Three simple yet powerful visualizations to better understand who is doing what</h3>
           </div>
         </div>
         
@@ -61,21 +61,21 @@
         	<div class= "rqbox">
           		<h3 class="text-center">Label usage</h3>
               <p class="text-center"><img src="imgs/rq1.png"/></p>
-          		<p  class="text-center">Visualize the main labels used in your projects and how they are related each other</p>
+          		<p  class="text-center">Visualize the labels used in your project, their frequency and how they relate to each other</p>
           	</div>
         </div>
         <div class="col-md-4">
         	<div class= "rqbox">
           		<h3 class="text-center">User involvement</h3>
               <p class="text-center"><img src="imgs/rq2.png"/></p>
-          		<p  class="text-center">Discover who is more involved in each label, who creates more, who closes, etc.</p>
+          		<p  class="text-center">Discover the most active users and contributors per label: who opens them? who closes them?.</p>
           	</div>
         </div>
         <div class="col-md-4">
         	<div class="rqbox">
           		<h3 class="text-center">Label timeline</h3>
               <p class="text-center"><img src="imgs/rq3.png"/></p>
-          		<p  class="text-center">Understand how the issues evolve for each label, when they are answered, merged, etc.</p>
+          		<p  class="text-center">Understand the typical evolution of issues under each label: when are they discussed?, solved?, etc.</p>
           	</div>
         </div>
       </div>
