Included contact website and link to github project. Fixes #3

--- a/index.html
+++ b/index.html
@@ -28,8 +28,15 @@
         <div class="row top">
           <div class="col-md-12">
             <img src="imgs/icon.png"/>
-            <h1>Ladrian</h1> 
+            <h1><a href="/index.html">Gila</a></h1> 
             <h2>Label-Driven Analyzer</h2>
+            <p>
+              <button class="btn" onclick="location.href='http://github.com/atlanmod/gila'">
+                <img style="float: left; margin-right: 0px; margin-top: 0px; margin-right: 10px; padding-top: 0px; padding-left: 0px; width: 18px;" src="imgs/gh-icon.png"/>
+                Visit on GitHub
+              </button>
+              <button class="btn" onclick="location.href='contact.html'">Who we are</button>
+            </p>
           </div>
         </div>
       </div>
@@ -61,7 +68,7 @@
         	<div class= "rqbox">
           		<h3 class="text-center">Label usage</h3>
               <p class="text-center"><img src="imgs/rq1.png"/></p>
-          		<p  class="text-center">Visualize the labels used in your project, their frequency and how they relate to each other</p>
+          		<p  class="text-center">Visualize the labels used in your GitHub project, their frequency and how they relate to each other</p>
           	</div>
         </div>
         <div class="col-md-4">
