--- a/index.html
+++ b/index.html
@@ -28,8 +28,8 @@
         <div class="row top">
           <div class="col-md-12">
             <img src="imgs/icon.png"/>
-            <h1>Ladrian</h1> 
-            <h2>Label-Driven Analyzer</h2>
+            <h1>GiLA</h1> 
+            <h2>GitHub Label Analyzer</h2>
           </div>
         </div>
       </div>
@@ -83,7 +83,7 @@
       <footer>
         <div class="row">
           <div class="col-md-12">  
-            <p class="text-center"><small>Ladrian is a visualization tool that allows you to analyze the labels in your GitHub project.</small> </p>
+            <p class="text-center"><small>GiLA is a visualization tool that allows you to analyze the labels in your GitHub project.</small> </p>
             <p class="text-center"><small>Code and Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</small></p>
             <p class="text-center"><small><a href="http://www.emn.fr/z-info/atlanmod/index.php/Main_Page">AtlanMod</a></small></p>
           </div>
