Polishing colors in buttons

--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
         <div class="row top">
           <div class="col-md-12">
             <img src="imgs/icon.png"/>
-            <h1><a href="/index.html">Gila</a></h1> 
-            <h2>Label-Driven Analyzer</h2>
+            <h1><a href="http://atlanmod.github.io/gila">GiLA</a></h1> 
+            <h2>GitHub Label Analyzer</h2>
             <p>
               <button class="btn" onclick="location.href='http://github.com/atlanmod/gila'">
                 <img style="float: left; margin-right: 0px; margin-top: 0px; margin-right: 10px; padding-top: 0px; padding-left: 0px; width: 18px;" src="imgs/gh-icon.png"/>
@@ -89,7 +89,7 @@
             <div class="row">
               <div class="panel-body">
                 <div class="col-md-3">
-                  <img style="width:128px;" class="img-thumbnail" src="imgs/vcosentino.jpg" alt="Valerio Cosentino">
+                  <img style="width:128px;" class="img-thumbnail" src="imgs/vcosentino.JPG" alt="Valerio Cosentino">
                 </div>
 
                 <div class="col-md-9">
