--- a/project.html
+++ b/project.html
@@ -72,6 +72,7 @@
         </div>
         <div class="col-md-8 rightcol">
           <div id="resolutiontl" class="rq3"></div>
+          <small>(Pass your mouse over the ticks to see the time)</small>
         </div>
       </div>
     </div>
