Adding ref to GHTorrent

--- a/index.html
+++ b/index.html
@@ -91,6 +91,7 @@
         <div class="row">
           <div class="col-md-12">  
             <p class="text-center"><small>GiLA is a visualization tool that allows you to analyze the labels in your GitHub project.</small> </p>
+            <p class="text-center"><small>GiLA uses <a href="http://ghtorrent.org">GHTorrent</a> as data source to mine GitHub projects. </small> </p>
             <p class="text-center"><small>Code and Documentation licensed under <a href="http://creativecommons.org/licenses/by/3.0/">CC BY 3.0</a>.</small></p>
             <p class="text-center"><small><a href="http://www.emn.fr/z-info/atlanmod/index.php/Main_Page">AtlanMod</a></small></p>
           </div>
