Implemented loading gif. Fixes #12

--- a/project.html
+++ b/project.html
@@ -51,7 +51,7 @@
           <p>This graph represents your selected label in the center as a circle node and then the group of people involved as boxes. Orange boxes represent GitHub collaborators while the rest are normal users. Users are connected to the label by means of and edge, the thicker it is the more number of issues the users has contributed.</p>
           <div id ="labelselection"> 
             <div id='lcombobox'></div>
-            <button class="btn btn-xs" value="RQ2" onclick="getrq2();">OK</button>
+            <button class="btn btn-xs" value="RQ2" onclick="getrq2();">OK</button><img id="loadingRQ2" style="display:none; margin-left: 10px" src="imgs/ajax-loader.gif"/>
           </div>
         </div>
         <div class="col-md-8 rightcol">
@@ -66,7 +66,7 @@
             <p>Analyzing how issues in each tag evolve over time allows assessing the main priorities and interests in a project (e.g., studying which tags are usually solved quickly).</p>
             <div id ="rq3labelselection"> 
               <div id='rq3lcombobox'></div>
-              <button class="btn btn-xs" value="RQ3" onclick="getrq3();">OK</button>
+              <button class="btn btn-xs" value="RQ3" onclick="getrq3();">OK</button><img id="loadingRQ3" style="display:none; margin-left: 10px" src="imgs/ajax-loader.gif"/>
             </div>
           </div>
         </div>
