Modified description for rq2

--- a/project.html
+++ b/project.html
@@ -48,7 +48,7 @@
       <div class="row">
         <div class="col-md-4 leftcol">
           <h2>User Involvement</h2>
-          <p>Select a label to see which users participate (open/close) in issues tagged with that label. The label is represented as a circled node in the center of the graph. The users appear as rectangle nodes (orange for GitHub collaborators). The thicker the edge between a user node and the central node, the more the number of issues the user has participated in.</p>
+          <p>Select a label to see how users participate on it. The label is shown as a circled node in the center of the graph, while the involved users are represented as rectangle nodes (orange for project collaborators). The width of the rectangle indicates the number of issues the user opened, the height denotes the number of issues he closed. The edges between user nodes and the central label node, represent comments made to issues containing that label, the thicker this line is the more the number of issues a user has commented.</p>
           <div id ="labelselection"> 
             <div id='lcombobox'></div>
             <button class="btn btn-xs" value="RQ2" onclick="getrq2();">OK</button><img id="loadingRQ2" style="display:none; margin-left: 10px" src="imgs/ajax-loader.gif"/>
