Added information to rq3 description

--- a/project.html
+++ b/project.html
@@ -64,7 +64,8 @@
         <div class="col-md-4 leftcol">
           <h2>Label timeline</h2>
           <div class="textdiv">
-            <p>It displays how issues in each tag evolve over time on average. This can help, for instance, to assess the priority given to issues based on how they are tagged (e.g. because more people are interested in issues with that tag or because some other tag is considered too difficult and thus it's avoided).</p>
+            <p>It displays how issues in each tag evolve over time on average. This can help, for instance, to assess the priority given to issues based on how they are tagged (e.g. because more people are interested in issues with that tag or because some other tag is considered too difficult and thus it's avoided).</p> 
+            <p>The timeline contains three branches, the merged branch that shows the percentage of issues for the label that have an associated merge action, the closing branch which shows the percentage of issues that were rejected (closed without merging) and the still open branch which displays the percentage of issues within a label that still haven't been solved.</p>
             <div id ="rq3labelselection"> 
               <div id='rq3lcombobox'></div>
               <button class="btn btn-xs" value="RQ3" onclick="generaterq3();">OK</button><img id="loadingRQ3" style="display:none; margin-left: 10px" src="imgs/ajax-loader.gif"/>
