adding example page and hrs/days in research question 3

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
             <h1><a href="http://atlanmod.github.io/gila">GiLA</a></h1> 
             <h2>GitHub Label Analyzer</h2>
             <p>
+			  <button class="btn" onclick="location.href='example.html'">How it works</button>
               <button class="btn" onclick="location.href='http://github.com/atlanmod/gila'">
                 <img style="float: left; margin-right: 0px; margin-top: 0px; margin-right: 10px; padding-top: 0px; padding-left: 0px; width: 18px;" src="imgs/gh-icon.png"/>
                 Visit on GitHub
