Added home icon to project page. Fixes #22

--- a/project.html
+++ b/project.html
@@ -22,6 +22,7 @@
     <div class="container">
       <div class="row">
         <div class="col-md-12 project">
+          <div id="homeicon"><a href="http://atlanmod.github.io/gila/"><img src="imgs/icon15.png" width="77" height="70"/></a></div>
           <div class="text-center" id="projectName"></div>
         </div>
       <div>
