adding image preview on hover

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
   	<script src="js/jQWidgets/jqxlistbox.js"></script>
   	<script src="js/jQWidgets/jqxcombobox.js"></script>
   	<script src="js/initIndex.js"></script>
+	<script type='text/javascript' src="js/imagePreviewOnHover.js"></script>
   </head>
   <body>
     <div class="container">
@@ -67,23 +68,23 @@
 
       <div class="row bottom">
         <div class="col-md-4">
-        	<div class= "rqbox">
+			<div class="rqbox">			
           		<h3 class="text-center">Label usage</h3>
-              <p class="text-center"><img src="imgs/rq1.png"/></p>
-          		<p  class="text-center">Visualize the labels used in your GitHub project, their frequency and how they relate to each other</p>
+				<p class="text-center"><a href="imgs/luex.png"><img src="imgs/rq1.png"/></a></p>
+          		<p class="text-center">Visualize the labels used in your GitHub project, their frequency and how they relate to each other</p>
           	</div>
         </div>
         <div class="col-md-4">
         	<div class= "rqbox">
           		<h3 class="text-center">User involvement</h3>
-              <p class="text-center"><img src="imgs/rq2.png"/></p>
+              <p class="text-center"><a href="imgs/uiex.png"><img src="imgs/rq2.png"/></a></p>
           		<p  class="text-center">Discover the most active users and contributors per label: who opens them? who closes them?.</p>
           	</div>
         </div>
         <div class="col-md-4">
         	<div class="rqbox">
           		<h3 class="text-center">Label timeline</h3>
-              <p class="text-center"><img src="imgs/rq3.png"/></p>
+              <p class="text-center"><a href="imgs/ltex.png"><img src="imgs/rq3.png"/></a></p>
           		<p  class="text-center">Understand the typical evolution of issues under each label: when are they discussed?, solved?, etc.</p>
           	</div>
         </div>
