hiding information when graph is empty

--- a/project.html
+++ b/project.html
@@ -34,6 +34,7 @@
         </div>
         <div class="col-md-8 rightcol">
           <div class="rq1"></div>
+		  <small id="info_rq1" style="visibility:hidden">(Pass your mouse over the labels to see their usage information and relations with other labels)</small>
         </div>
       </div>
     
@@ -49,7 +50,8 @@
         </div>
         <div class="col-md-8 rightcol">
           <div class="rq2"></div>
-		    </div>
+		  <small id="info_rq2" style="visibility:hidden">(Pass your mouse over the users to see their involvement information)</small>
+		</div>
       </div>
 	
       <div class="row">
@@ -67,7 +69,7 @@
         </div>
         <div class="col-md-8 rightcol">
           <div id="resolutiontl" class="rq3"></div>
-          <small>(Pass your mouse over the ticks to see the time)</small>
+          <small id="info_rq3" style="visibility:hidden">(Pass your mouse over the ticks to see the time)</small>
         </div>
       </div>
     </div>
