--- a/index.html
+++ b/index.html
@@ -5,9 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>GitHub Label Analyzer</title>
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css">
-    <link rel="stylesheet" href="css/style.css" />
     <link rel="stylesheet" href="css/jQWidgets/jqx.base.css" />
-
+    <link rel="stylesheet" href="css/style.css" />
     <link href='http://fonts.googleapis.com/css?family=Exo:600,900' rel='stylesheet' type='text/css'>
     
   	<script src="js/vendor/jquery.js"></script>
@@ -63,8 +62,11 @@
         <div class="col-md-3">
           <div class="selector">
           	<h2>Select your project</h2>
-          	<div class="projectselection"> 
-              <p class="text-center"><div id='pcombobox'></div></p><br><br>
+          	<div class="projectselection">
+              <p class="text-center">
+	              <div id='pcombobox'></div>
+              </p>
+              <br><br>             
               <p class="text-center">
             	   <button class="btn btn-block" onclick="location.href='project.html?projectId=' + selectedProjectValue + '&projectName=' + selectedProjectName">Show me!</button>
               </p>
