Added tooltip to project search. Fixes #24

--- a/index.html
+++ b/index.html
@@ -62,11 +62,13 @@
         <div class="col-md-3">
           <div class="selector">
           	<h2>Select your project</h2>
+          	<div id="projecthelp"><img src="imgs/help_icon14.png" height="14" width="14"/></div>
           	<div class="projectselection">
               <p class="text-center">
 	              <div id='pcombobox'></div>
               </p>
-              <br><br>             
+<!--               <br> -->
+<!--               <br>              -->
               <p class="text-center">
             	   <button class="btn btn-block" onclick="location.href='project.html?projectId=' + selectedProjectValue + '&projectName=' + selectedProjectName">Show me!</button>
               </p>
