--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
   	<script src="js/jQWidgets/jqxscrollbar.js"></script>
   	<script src="js/jQWidgets/jqxlistbox.js"></script>
   	<script src="js/jQWidgets/jqxcombobox.js"></script>
+    <script src="js/imagePreviewOnHover.js"></script>
   	<script src="js/initIndex.js"></script>
-	<script type='text/javascript' src="js/imagePreviewOnHover.js"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
 	  (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
@@ -67,8 +67,6 @@
               <p class="text-center">
 	              <div id='pcombobox'></div>
               </p>
-<!--               <br> -->
-<!--               <br>              -->
               <p class="text-center">
             	   <button class="btn btn-block" onclick="location.href='project.html?projectId=' + selectedProjectValue + '&projectName=' + selectedProjectName">Show me!</button>
               </p>
@@ -79,25 +77,25 @@
 
       <div class="row bottom">
         <div class="col-md-4">
-			<div class="rqbox">			
-          		<h3 class="text-center">Label usage</h3>
-				<p class="text-center"><a href="imgs/luex.png"><img src="imgs/rq1.png"/></a></p>
-          		<p class="text-center">Visualize the labels used in your GitHub project, their frequency and how they relate to each other</p>
-          	</div>
+          <div class="rqbox">			
+        		<h3 class="text-center">Label usage <img id="rqbox1" src="imgs/help_icon14.png"/></h3>
+			      <p class="text-center"><img src="imgs/rq1.png"/></p>
+        		<p class="text-center">Visualize the labels used in your GitHub project, their frequency and how they relate to each other</p>
+        	</div>
         </div>
         <div class="col-md-4">
         	<div class= "rqbox">
-          		<h3 class="text-center">User involvement</h3>
-              <p class="text-center"><a href="imgs/uiex.png"><img src="imgs/rq2.png"/></a></p>
-          		<p  class="text-center">Discover the most active users and contributors per label: who opens them? who closes them?.</p>
-          	</div>
+        		<h3 class="text-center">User involvement <img id="rqbox2" src="imgs/help_icon14.png"/></h3>
+            <p class="text-center"><img src="imgs/rq2.png"/></p>
+        		<p class="text-center">Discover the most active users and contributors per label: who opens them? who closes them?.</p>
+          </div>
         </div>
         <div class="col-md-4">
         	<div class="rqbox">
-          		<h3 class="text-center">Label timeline</h3>
-              <p class="text-center"><a href="imgs/ltex.png"><img src="imgs/rq3.png"/></a></p>
-          		<p  class="text-center">Understand the typical evolution of issues under each label: when are they discussed?, solved?, etc.</p>
-          	</div>
+        		<h3 class="text-center">Label timeline <img id="rqbox3" src="imgs/help_icon14.png"/></h3>
+            <p class="text-center"><img src="imgs/rq3.png"/></p>
+        		<p class="text-center">Understand the typical evolution of issues under each label: when are they discussed?, solved?, etc.</p>
+        	</div>
         </div>
       </div>
 
