Added a sort of ribbon to show examples for each visualization

--- a/index.html
+++ b/index.html
@@ -18,7 +18,6 @@
   	<script src="js/jQWidgets/jqxscrollbar.js"></script>
   	<script src="js/jQWidgets/jqxlistbox.js"></script>
   	<script src="js/jQWidgets/jqxcombobox.js"></script>
-    <script src="js/imagePreviewOnHover.js"></script>
   	<script src="js/initIndex.js"></script>
 	<script>
 	  (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
@@ -77,25 +76,28 @@
 
       <div class="row bottom">
         <div class="col-md-4">
-          <div class="rqbox">			
-        		<h3 class="text-center">Label usage <img id="rqbox1" src="imgs/help_icon14.png"/></h3>
+          <div class="rqbox">	
+        		<h3 class="text-center">Label usage</h3>
 			      <p class="text-center"><img src="imgs/rq1.png"/></p>
         		<p class="text-center">Visualize the labels used in your GitHub project, their frequency and how they relate to each other</p>
         	</div>
+          <div id="rqbox1" class="ribbon">Example</div>
         </div>
         <div class="col-md-4">
         	<div class= "rqbox">
-        		<h3 class="text-center">User involvement <img id="rqbox2" src="imgs/help_icon14.png"/></h3>
+        		<h3 class="text-center">User involvement</h3>
             <p class="text-center"><img src="imgs/rq2.png"/></p>
         		<p class="text-center">Discover the most active users and contributors per label: who opens them? who closes them?.</p>
           </div>
+          <div id="rqbox2" class="ribbon">Example</div>
         </div>
         <div class="col-md-4">
         	<div class="rqbox">
-        		<h3 class="text-center">Label timeline <img id="rqbox3" src="imgs/help_icon14.png"/></h3>
+        		<h3 class="text-center">Label timeline</h3>
             <p class="text-center"><img src="imgs/rq3.png"/></p>
         		<p class="text-center">Understand the typical evolution of issues under each label: when are they discussed?, solved?, etc.</p>
         	</div>
+          <div id="rqbox3" class="ribbon">Example</div>
         </div>
       </div>
 
